Update project version to 2.4.0 (#91)
* Update project version to 2.4.0

- Updated current-version to 2.4.0 in .github/project.yml.
- Updated next-version to 2.4.1-SNAPSHOT in .github/project.yml.

* Update src/test/java/de/cuioss/tools/net/UrlParameterTest.java

Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>

* Update src/main/java/de/cuioss/tools/io/StructuredFilename.java

Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>

* Refactor FilenameUtils and Hex classes for improved readability and performance

* Removing codeql

* Refactor UrlParameter class: remove unused constants and update method signatures for clarity

---------

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>